# hooke

./: .gitignore  .gitmodules  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  GUIDELINES.md  HUMANS.md  Makefile  PROJECT.md  README.md  STANDARDS.md  pyproject.toml
.claude/: settings.json
.claude/commands/: chunk-styleguide.md
.claude/hooks/: gh-auth-match.sh  protect-upstream.sh  stay-on-main.sh  styleguide-chunks.sh
.claude/rules/: engineering.mdc  parallel-tasks.mdc  python.mdc
.cursor/: rules.md
.cursor/rules/: hooke-hub.mdc  ml-research.mdc  styleguide.mdc  typescript.mdc
.github/: pull_request_template.md
.github/ISSUES/: v0.0.1-milestones.md
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  config.yml  discussion.yml  feature.md  feature.yml
.github/workflows/: ci.yml  release.yml  sync-upstream.yml  test.yml
configs/: example.yaml
demo/: pyproject.toml  schema_pipeline.py  schema_pipeline_accumulator.py  test_schema_pipeline.py  test_schema_pipeline_accumulator.py
demo/lineage/: README.md  __init__.py  artifacts.py  conditioning_example.py  pipeline_example.py  schema_step.py  weave_caching_demo.py  weave_multiproject.py  weave_pipeline.py
demo/variants/: accumulator.py  functional_pipe.py  method_chain.py  nested.py  schemas.py  test_variants.py  weave_refs.py
docs/: 2025 Retro - Engineering Lessons.md  Hooke 2025 Retro.md  Hooke Program Charter - 2026.md
scripts/: example.py  upload_checkpoint.py
src/hooke/: __init__.py  config.py  model.py  pipeline.py  preprocessing.py
src/hsh/: __init__.py  config.py  data.py  eval.py  finetune.py  hydra_conf.py  infer.py  model.py  train.py
templates/: Makefile  PROJECT_SPEC.md  pyproject.toml  styleguide-chunker.md
templates/.github/workflows/: ci.yml
tests/: conftest.py  test_config.py  test_model.py  test_pipeline.py  test_preprocessing.py
tests/integration/: test_pipeline_e2e.py
tests/smoke/: test_cli.py  test_imports.py
